# slapnet

./: .gitignore  Makefile  benchmarks-contingency.sh  run-benchmarks.sh  slapnet.cabal
benchmarks/: benchmarks-contingency.sh  run-benchmarks-lola.sh  run-benchmarks-sara.sh  run-benchmarks.sh
benchmarks/cav-benchmarks/: run-benchmarks.sh
benchmarks/cav-benchmarks/soter/: terminating.dontknow  terminating.negative  terminating.positive
benchmarks/scalable/: run_benchmarks.sh  stats.r
benchmarks/scalable/LeaderElectionCR79/: make_nets.sh
benchmarks/scalable/LeaderElectionDKR82/: make_net.py
benchmarks/scalable/Snapshot/: make_nets.sh
benchmarks/service-tech/: benchmarks-contingency.sh  run-benchmarks-lola.sh  run-benchmarks-sara.sh  run-benchmarks.sh
benchmarks/service-tech/ibm-soundness/models/lib_A/: A.s00000021__s00000698.lola.terminating.task1  (+281 more)
examples/: h_fairly_terminates.pnet  lamport.pnet  leader_election.pnet  leader_election_nlogn.pnet  petersons.pnet  snapshot.pnet  terminating.pnet
src/: Main.hs  Options.hs  Parser.hs  PetriNet.hs  Printer.hs  Property.hs  Solver.hs  Structure.hs  Util.hs
src/Parser/: LOLA.hs  LOLAFormula.hs  MIST.hs  PNET.hs  TPN.hs
src/Printer/: DOT.hs  LOLA.hs  SARA.hs  SPEC.hs
src/Solver/: BooleanTransitionInvariant.hs  CommFreeReachability.hs  Formula.hs  GeneralSComponent.hs  LivenessInvariant.hs  MultiwayCut.hs  SComponent.hs  SComponentWithCut.hs  SafetyInvariant.hs  Simplifier.hs  StateEquation.hs  SubnetEmptyTrap.hs  TInvariantRefinement.hs  TransitionInvariant.hs  TrapConstraints.hs
(+1096 files in other folders)
