name:                slapnet
version:             0.1.0.0
synopsis:            Safety and Liveness Analysis of Petri Nets with SMT solvers
description:
    SLAPnet is a tool to check safety and liveness properties of Petri nets
    using SMT solvers such as Z3, Yices or CVC4.
license:             GPL-3
license-file:        LICENSE
author:              Philipp Meyer
maintainer:          philipp.j.meyer@gmail.com
category:            Formal Methods
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/cryptica/slapnet.git

executable slapnet
  main-is: Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       base >=4 && <5, sbv, parsec, containers, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
